Improve GUI and add refresh system

--- a/src/web/templates/base.html
+++ b/src/web/templates/base.html
@@ -5,7 +5,8 @@
     <title>Admin</title>
     <style>
         body { font-family: sans-serif; padding: 1em; }
-        nav a { margin-right: 1em; }
+        nav a { margin-right: 1em; font-size: 1.2em; }
+        button { font-size: 1.1em; padding: 0.5em 1em; }
         table { width: 100%; border-collapse: collapse; }
         th, td { border: 1px solid #ccc; padding: 0.5em; text-align: left; }
         input[type=text], input[type=number] { width: 100%; box-sizing: border-box; }
