--- a/src/web/templates/drinks.html
+++ b/src/web/templates/drinks.html
@@ -3,23 +3,25 @@
 <h1>Getränke</h1>
 <table>
 
-<tr><th>Name</th><th>Preis</th><th>Lager</th><th>Aktion</th></tr>
+<tr><th>Name</th><th>Preis</th><th>Lager</th><th colspan="2">Aktion</th></tr>
 {% for d in drinks %}
 <tr>
 <td>{{ d['name'] }}</td>
 <td>{{ (d['price']/100)|round(2) }} €</td>
 <td>{{ d['stock'] }}</td>
 
+<td><a href="{{ url_for('drink_edit', drink_id=d['id']) }}">Bearbeiten</a></td>
 <td><a href="{{ url_for('drink_delete', drink_id=d['id']) }}">Löschen</a></td>
 </tr>
 {% endfor %}
 </table>
 <h2>Neu</h2>
-<form method="post" action="{{ url_for('drink_add') }}">
+<form method="post" action="{{ url_for('drink_add') }}" enctype="multipart/form-data">
     <input type="text" name="name" placeholder="Name">
 
     <input type="number" step="0.01" name="price" placeholder="Preis in Euro">
     <input type="number" name="stock" placeholder="Lagerbestand">
+    <input type="file" name="image">
 
     <button type="submit">Hinzufügen</button>
 </form>
