--- a/src/web/templates/users.html
+++ b/src/web/templates/users.html
@@ -3,7 +3,7 @@
 <h1>Benutzer</h1>
 <table>
 
-<tr><th>Name</th><th>UID</th><th>Guthaben</th><th>Aktion</th></tr>
+<tr><th>Name</th><th>UID</th><th>Guthaben</th><th colspan="2">Aktion</th></tr>
 
 {% for u in users %}
 <tr>
@@ -12,6 +12,7 @@
 
 <td>{{ (u['balance']/100)|round(2) }} €</td>
 
+<td><a href="{{ url_for('user_edit', user_id=u['id']) }}">Bearbeiten</a></td>
 <td><a href="{{ url_for('user_delete', user_id=u['id']) }}">Löschen</a></td>
 </tr>
 {% endfor %}
