--- a/src/web/templates/drinks.html
+++ b/src/web/templates/drinks.html
@@ -3,13 +3,19 @@
 <h1>Getränke</h1>
 <table>
 
-<tr><th>Name</th><th>Preis</th><th>Lager</th><th colspan="2">Aktion</th></tr>
+<tr><th>Name</th><th>Preis</th><th>Lager</th><th>Auffüllen</th><th colspan="2">Aktion</th></tr>
 {% for d in drinks %}
 <tr>
 <td>{{ d['name'] }}</td>
 <td>{{ (d['price']/100)|round(2) }} €</td>
 <td>{{ d['stock'] }}</td>
 
+<td>
+  <form method="post" action="{{ url_for('drink_restock', drink_id=d['id']) }}" style="display:inline">
+    <input type="number" name="amount" min="1" size="4">
+    <button type="submit">+</button>
+  </form>
+</td>
 <td><a href="{{ url_for('drink_edit', drink_id=d['id']) }}">Bearbeiten</a></td>
 <td><a href="{{ url_for('drink_delete', drink_id=d['id']) }}">Löschen</a></td>
 </tr>
