--- a/src/web/templates/base.html
+++ b/src/web/templates/base.html
@@ -21,6 +21,7 @@
     <a href="{{ url_for('users') }}">Benutzer</a>
     <a href="{{ url_for('log') }}">Log</a>
     <a href="{{ url_for('change_password') }}">Passwort</a>
+    <a href="{{ url_for('change_password') }}">Passwort</a>
     <a href="{{ url_for('logout') }}">Logout</a>
 </nav>
 <hr>
