--- a/src/web/templates/users.html
+++ b/src/web/templates/users.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 {% block content %}
 <h1>Benutzer</h1>
+{% if error %}<p style="color:red;">{{ error }}</p>{% endif %}
 <table>
 
 <tr><th>Name</th><th>UID</th><th>Guthaben</th><th colspan="2">Aktion</th></tr>
