Improve web interface and robustness

--- a/src/web/templates/login.html
+++ b/src/web/templates/login.html
@@ -1,16 +1,10 @@
-<!doctype html>
-<html lang="de">
-<head>
-    <meta charset="utf-8">
-    <title>Login</title>
-</head>
-<body>
+{% extends 'base.html' %}
+{% block content %}
 <h1>Anmeldung</h1>
-{% if error %}<p style="color:red;">{{ error }}</p>{% endif %}
+{% if error %}<p class="error">{{ error }}</p>{% endif %}
 <form method="post">
-    <label>Nutzername:<br><input type="text" name="username"></label><br>
-    <label>Passwort:<br><input type="password" name="password"></label><br>
+    <label>Nutzername:<br><input type="text" name="username"></label>
+    <label>Passwort:<br><input type="password" name="password"></label>
     <button type="submit">Login</button>
 </form>
-</body>
-</html>
+{% endblock %}
