--- a/src/web/templates/log.html
+++ b/src/web/templates/log.html
@@ -12,4 +12,7 @@
 </tr>
 {% endfor %}
 </table>
+<form method="post" action="{{ url_for('log_clear') }}" onsubmit="return confirm('Log wirklich löschen?');">
+    <button type="submit">Log löschen</button>
+</form>
 {% endblock %}
