--- a/src/web/templates/base.html
+++ b/src/web/templates/base.html
@@ -28,13 +28,28 @@ nav a:hover { text-decoration:underline; }
 <body>
 <nav>
     <a href="{{ url_for('index') }}">Home</a>
-    <a href="{{ url_for('drinks') }}">Getränke</a>
-    <a href="{{ url_for('users') }}">Benutzer</a>
-    <a href="{{ url_for('log') }}">Log</a>
+    <details style="display:inline-block">
+        <summary style="color:#fff; cursor:pointer">Getränke</summary>
+        <a href="{{ url_for('drinks') }}">Verwalten</a>
+        <a href="{{ url_for('export_inventory') }}">CSV Bestand</a>
+        <a href="{{ url_for('export_restocks') }}">CSV Auffüllungen</a>
+    </details>
+    <details style="display:inline-block">
+        <summary style="color:#fff; cursor:pointer">Benutzer</summary>
+        <a href="{{ url_for('users') }}">Verwalten</a>
+        <a href="{{ url_for('topup') }}">Aufladen</a>
+        <a href="{{ url_for('topup_log') }}">Aufladungen</a>
+        <a href="{{ url_for('export_topups') }}">CSV Aufladungen</a>
+        <a href="{{ url_for('export_users') }}">CSV Benutzer</a>
+        <a href="{{ url_for('import_users') }}">Import Benutzer</a>
+    </details>
+    <details style="display:inline-block">
+        <summary style="color:#fff; cursor:pointer">Logs</summary>
+        <a href="{{ url_for('log') }}">Verkäufe</a>
+        <a href="{{ url_for('export_transactions') }}">CSV Verkäufe</a>
+    </details>
     <a href="{{ url_for('settings') }}">Einstellungen</a>
     <a href="{{ url_for('change_password') }}">Passwort</a>
-    <a href="{{ url_for('export_transactions') }}">CSV Verkäufe</a>
-    <a href="{{ url_for('export_inventory') }}">CSV Bestand</a>
     <a href="{{ url_for('logout') }}">Logout</a>
 </nav>
 <div class="container">
