Add admin pin defaults

--- a/src/web/templates/base.html
+++ b/src/web/templates/base.html
@@ -57,6 +57,7 @@
             <ul class="submenu">
                 <li><a href="{{ url_for('log') }}">Verkäufe</a></li>
                 <li><a href="{{ url_for('export_transactions') }}">CSV Verkäufe</a></li>
+                <li><a href="{{ url_for('file_logs') }}">Programmlogs</a></li>
             </ul>
         </li>
         <li><a href="{{ url_for('settings') }}">Einstellungen</a></li>
