--- a/src/web/templates/settings.html
+++ b/src/web/templates/settings.html
@@ -9,6 +9,9 @@
         <input type="text" name="topup_uid" id="topup_uid" value="{{ topup_uid }}">
     </label>
     <button type="button" onclick="readUid('topup_uid')">UID lesen</button><br>
+    <label>Admin-PIN:<br>
+        <input type="text" name="admin_pin" value="{{ admin_pin }}">
+    </label><br>
     <button type="submit">Speichern</button>
 </form>
 <script>
