--- a/src/web/templates/drink_edit.html
+++ b/src/web/templates/drink_edit.html
@@ -6,6 +6,7 @@
     <label>Preis in Euro:<br><input type="number" step="0.01" name="price" value="{{ (drink['price']/100)|round(2) }}"></label><br>
     <label>Lagerbestand:<br><input type="number" name="stock" value="{{ drink['stock'] }}"></label><br>
     <label>Mindestbestand:<br><input type="number" name="min_stock" value="{{ drink['min_stock'] }}"></label><br>
+    <label>Seite:<br><input type="number" name="page" min="1" value="{{ drink['page'] }}"></label><br>
     <input type="hidden" name="current_image" value="{{ drink['image'] }}">
     <label>Logo (optional):<br><input type="file" name="image"></label><br>
     <button type="submit">Speichern</button>
