--- a/src/web/templates/drink_edit.html
+++ b/src/web/templates/drink_edit.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 {% block content %}
 <h1>Getränk bearbeiten</h1>
+{% if error %}<p class="error">{{ error }}</p>{% endif %}
 <form method="post" enctype="multipart/form-data">
     <label>Name:<br><input type="text" name="name" value="{{ drink['name'] }}"></label><br>
     <label>Preis in Euro:<br><input type="number" step="0.01" name="price" value="{{ (drink['price']/100)|round(2) }}"></label><br>
