--- a/src/web/templates/login.html
+++ b/src/web/templates/login.html
@@ -3,6 +3,7 @@
 <h1>Anmeldung</h1>
 {% if error %}<p class="error">{{ error }}</p>{% endif %}
 <form method="post">
+    {{ csrf_token() }}
     <label>Nutzername:<br><input type="text" name="username"></label>
     <label>Passwort:<br><input type="password" name="password"></label>
     <button type="submit">Login</button>
