--- a/src/web/templates/topup_log.html
+++ b/src/web/templates/topup_log.html
@@ -10,6 +10,7 @@
 <td>{{ (r['amount']/100)|round(2) }} €</td>
 <td>
     <form method="post" action="{{ url_for('topup_delete', topup_id=r['id']) }}" onsubmit="return confirm('Eintrag wirklich löschen?');">
+        {{ csrf_token() }}
         <button type="submit">Löschen</button>
     </form>
 </td>
@@ -17,6 +18,7 @@
 {% endfor %}
 </table>
 <form method="post" action="{{ url_for('topup_log_clear') }}" onsubmit="return confirm('Log wirklich löschen?');">
+    {{ csrf_token() }}
     <button type="submit">Log löschen</button>
 </form>
 {% endblock %}
