--- a/src/web/templates/drinks.html
+++ b/src/web/templates/drinks.html
@@ -15,6 +15,7 @@
 
 <td>
   <form method="post" action="{{ url_for('drink_restock', drink_id=d['id']) }}" style="display:inline">
+    {{ csrf_token() }}
     <input type="number" name="amount" min="1" size="4">
     <button type="submit">+</button>
   </form>
@@ -26,6 +27,7 @@
 </table>
 <h2>Neu</h2>
 <form method="post" action="{{ url_for('drink_add') }}" enctype="multipart/form-data">
+    {{ csrf_token() }}
     <input type="text" name="name" placeholder="Name">
 
     <input type="number" step="0.01" name="price" placeholder="Preis in Euro">
