--- a/src/web/templates/import_users.html
+++ b/src/web/templates/import_users.html
@@ -2,6 +2,7 @@
 {% block content %}
 <h1>Benutzer importieren</h1>
 <form method="post" enctype="multipart/form-data">
+    {{ csrf_token() }}
     <input type="file" name="file">
     <button type="submit">Importieren</button>
 </form>
