--- a/src/web/templates/base.html
+++ b/src/web/templates/base.html
@@ -36,6 +36,7 @@
 <nav>
     <ul class="menu">
         <li><a href="{{ url_for('index') }}">Home</a></li>
+        <li><a href="{{ url_for('dashboard') }}">Dashboard</a></li>
         <li class="dropdown"><a href="#">Getränke</a>
             <ul class="submenu">
                 <li><a href="{{ url_for('drinks') }}">Verwalten</a></li>
