--- a/src/web/templates/index.html
+++ b/src/web/templates/index.html
@@ -2,6 +2,7 @@
 {% block content %}
 <h1>Adminbereich</h1>
 <p>Willkommen!</p>
+<p><a href="{{ url_for('dashboard') }}">Dashboard</a></p>
 
 <form method="post" action="{{ url_for('refresh') }}">
     <button type="submit">GUI aktualisieren</button>
