--- a/src/web/templates/topup.html
+++ b/src/web/templates/topup.html
@@ -24,6 +24,10 @@
 <script>
 function readUid(target){
     fetch('{{ url_for('read_uid') }}').then(r=>r.json()).then(d=>{
+        if(d.error){
+            alert(d.error);
+            return;
+        }
         document.getElementById(target).value=d.uid;
         if(target==='uid_scan') updateName();
     });
