Add pagination to log views

--- a/src/web/templates/base.html
+++ b/src/web/templates/base.html
@@ -24,6 +24,9 @@
         .error { color:red; }
         .info { color:green; }
         .negstock { background:#fdd; }
+        .pagination { text-align:center; margin:0.5em 0; }
+        .pagination a { margin:0 0.5em; text-decoration:none; }
+        .pagination span { margin:0 0.5em; }
         @media(max-width:600px){
             nav ul { flex-direction:column; }
             nav .submenu { position:static; display:none; }
