--- a/src/web/templates/base.html
+++ b/src/web/templates/base.html
@@ -49,8 +49,9 @@
         </li>
         <li class="dropdown"><a href="#">Benutzer</a>
             <ul class="submenu">
-                <li><a href="{{ url_for('users') }}">Verwalten</a></li>
-                <li><a href="{{ url_for('topup') }}">Aufladen</a></li>
+                  <li><a href="{{ url_for('users') }}">Verwalten</a></li>
+                  <li><a href="{{ url_for('invoice_users') }}">Rechnungskarten</a></li>
+                  <li><a href="{{ url_for('topup') }}">Aufladen</a></li>
                 <li><a href="{{ url_for('topup_log') }}">Aufladungen</a></li>
                 <li><a href="{{ url_for('export_topups') }}">CSV Aufladungen</a></li>
                 <li><a href="{{ url_for('export_users') }}">CSV Benutzer</a></li>
