Add total user balance to admin index

--- a/src/web/templates/index.html
+++ b/src/web/templates/index.html
@@ -3,6 +3,9 @@
 <h1>Adminbereich</h1>
 <p>Willkommen!</p>
 
+<p>Guthaben aller Benutzer (ohne Veranstaltungskarten):
+   {{ (total_balance/100)|round(2) }} €</p>
+
 <form method="post" action="{{ url_for('refresh') }}">
     <button type="submit">GUI aktualisieren</button>
 </form>
